@@ -73,8 +73,8 @@ auth =
 ; Number of parallel workers (processes). Valid integer, default: 2
 workers = 2
 
-; Number of parallel threads per worker (process). Valid integer, default: 5
-threads = 5
+; Number of parallel threads per worker (process). Valid integer, default: 32
+threads = 32
 
 ; Idle timeout in seconds for HTTP connect sessions. Valid integer, default: 30
 idle = 30
